--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
                     </p>
                 </div>
             </div>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="img/1.png" style="width:100%;">
+                </div>
+                <div class="mySlides fade">
+                    <img src="img/2.png" style="width:100%;">
+                </div>
+                <div class="mySlides fade">
+                    <img src="img/3.png" style="width:100%;">
+                </div>
+            </div>
             <div class="col-12 pad-card">
                 <div class="row">
                     <div class="col-6 jarak-kartu">
@@ -202,6 +213,29 @@
             </div>
         </div>
     </div>
+    <script>
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            let dots = document.getElementsByClassName("dots");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) {
+                slideIndex = 1
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += "active";
+            setTimeout(showSlides, 3000); // Change image every 2 seconds
+        }
+    </script>
 </body>
 
 </html>
